--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,6 @@ ThreadHeapStackStrace_download_urls
 ThreadHeapStackStrace.log
 oom_heapdump.hprof
 oom_heapdump_download_urls
+*.gz
+stats.txt
+initial.sh
